test/expected/explain_af-c++11.out
explain auto f()
        ^
9: error: "auto" return type not supported until C++14
